--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,25 +46,19 @@
         </div>
       </div>
     </form>
-    <div class='rcorners bg-w row txt-c'>
-      <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-      <div class='col-md-9 mg p-s debug'>
-      <a href="#"><strong>Hillary Clinton - District - Office</strong></a href="#">
-      <table class='debug w txt-c'>
-        <% @organizations.each do |organization| %>
-            <tr class='debug'>
-              <td><%= organization.user.name %></td>
-            <% if @logged_in %>
-              <td><%= button_to "Watch", watch_path(organization.user), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></td>
-            <% else %>
-                <!-- this below button doesnt work for now -->
-              <td><%= button_to "Watch", login_and_watch_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization }  %></td>
-            <% end %>
-            </tr>
-        <% end %>
-      </table>
+    <ul class='nav nav-tabs bg-w row txt-c'>
+      <li class="active"><a href="#organizations" data-toggle="tab"><strong>Organizations To Watch</strong></a></li>
+      <li><a href="#candidates" data-toggle='tab'><strong>Candidates To Endorse</strong></a></li>
+    </ul>
+    <div class='tab-content'>
+    <div class='rcorners bg-w row txt-c tab-pane active' id='organizations'>
+      <%= render "shared/organizations_to_watch" %>
     </div>
-  </div>
+    <div class='rcorners bg-w row txt-c tab-pane active' id='candidates'>
+      <%= render "shared/candidates_to_watch" %>
+    </div>
+
+</div>
 </div>
 <div class="col-md-3 mg bg-w debug">
   <h4 class='fw-t txt-c'>Recent Endorsements</h4>
